# task-Bewise

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: integration.yml  test-report.yml
app/: Dockerfile  README.md  pyproject.toml
app/app/: api.py  database.py  logger.py  main.py  message_broker_producer.py  models.py  schemas.py
app/tests/: test_api.py  test_message_broker_producer.py
initdb.d/: init.sql
